--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "lintFix": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "next start"
   },
   "dependencies": {
@@ -43,9 +44,12 @@
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "^15.3.5",
     "firebase": "latest",
     "input-otp": "1.4.1",
     "js-cookie": "latest",
+    "lint": "^0.8.19",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
@@ -62,6 +66,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
